force-app/main/default/objects/CHANNEL_ORDERS__Partner_Pricebook_Entry__c/CHANNEL_ORDERS__Partner_Pricebook_Entry__c.object-meta.xml
<CustomObject>
    <label>Partner Pricebook Entry</label>
    <nameField>
        <displayFormat>PPE-{000000}</displayFormat>
        <label>Partner Pricebook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Pricebook Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>