force-app/main/default/objects/CHANNEL_ORDERS__Partner_Pricebook_Entry__c/fields/CHANNEL_ORDERS__Pricebook_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Pricebook_Entry_Id__c</fullName>
    <description>This is the pricebook entry Id of the associated data in org62</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the pricebook entry Id of the associated data in org62</inlineHelpText>
    <label>Pricebook Entry Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>