force-app/main/default/objects/CHANNEL_ORDERS__Partner_Pricebook_Entry__c/fields/CHANNEL_ORDERS__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Name__c</fullName>
    <description>This is the Product Name of the associated data in org62.</description>
    <inlineHelpText>This is the Product Name of the associated data in org62.</inlineHelpText>
    <label>Product Name</label>
    <type>TextArea</type>
</CustomField>