force-app/main/default/objects/CHANNEL_ORDERS__Partner_Pricebook_Entry__c/fields/CHANNEL_ORDERS__Type__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
                <default>true</default>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Historic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>