force-app/main/default/objects/CHANNEL_ORDERS__Partner_Pricebook_Entry__c/listViews/CHANNEL_ORDERS__All.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__All</fullName>
    <columns>NAME</columns>
    <columns>CHANNEL_ORDERS__Product_Name__c</columns>
    <columns>CHANNEL_ORDERS__Pricebook_Entry_Id__c</columns>
    <columns>CHANNEL_ORDERS__Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>